--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
+           
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
