--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.2.3",
     "@angular/cdk": "^16.2.2",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.2.2",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/common": "^16.2.3",
+    "@angular/compiler": "^16.2.3",
+    "@angular/core": "^16.2.3",
+    "@angular/forms": "^16.2.3",
+    "@angular/platform-browser": "^16.2.3",
+    "@angular/platform-browser-dynamic": "^16.2.3",
+    "@angular/router": "^16.2.3",
     "@cloudinary/ng": "^2.0.0",
     "@cloudinary/url-gen": "^1.11.2",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
@@ -27,6 +26,7 @@
     "jquery": "^3.7.0",
     "ngx-slick-carousel": "^15.0.0",
     "ngx-toastr": "^17.0.2",
+    "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
@@ -35,8 +35,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.5",
     "@angular/cli": "^16.2.1",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.2.3",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
