--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,6 @@
             ],
             "styles": [
               "src/styles.css",
-       
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
               "node_modules/@ctrl/ngx-emoji-mart/picker.css",
@@ -95,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
