--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flowbite": "^1.8.1",
     "jquery": "^3.7.0",
     "ngx-slick-carousel": "^15.0.0",
+    "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^17.0.2",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
