--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@cloudinary/ng": "^2.0.0",
     "@cloudinary/url-gen": "^1.11.2",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "@swimlane/ngx-charts": "^20.4.1",
     "cloudinary-core": "^2.13.0",
     "flowbite": "^1.8.1",
     "jquery": "^3.7.0",
@@ -36,6 +37,9 @@
     "@angular-devkit/build-angular": "^16.0.5",
     "@angular/cli": "^16.2.1",
     "@angular/compiler-cli": "^16.2.3",
+    "@types/d3-scale": "^4.0.5",
+    "@types/d3-selection": "^3.0.7",
+    "@types/d3-shape": "^3.1.3",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.9",
     "autoprefixer": "^10.4.14",
