--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@cloudinary/ng": "^2.0.0",
     "@cloudinary/url-gen": "^1.11.2",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@swimlane/ngx-charts": "^20.4.1",
     "@zegocloud/zego-uikit-prebuilt": "^1.8.11",
